--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.romandanylyk:pageindicatorview:1.0.2'
+    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
